IHM final_integration/CAS4-SDK/VC2013/CAS4.h

#define ErrorNoCalibration              -19
#define errCasNoConfig           errCASError-3
/////////////////////
// Error handling  //
/////////////////////
extern int __callconv casGetError( int ADevice );
extern char* __callconv casGetErrorMessage( int AError, char* Dest, int AMaxLen );
///////////////////////////////////
// Device Handles and Interfaces //
///////////////////////////////////
#define InterfaceISA          0
#define InterfacePCI          1
#define InterfaceTest         3
#define InterfaceUSB          5
#define InterfacePCIe        10
#define InterfaceEthernet    11
extern int __callconv casCreateDevice( void );
extern int __callconv casCreateDeviceEx( int AInterfaceType, int AInterfaceOption );
extern int __callconv casChangeDevice( int ADevice, int AInterfaceType, int AInterfaceOption );
extern int __callconv casDoneDevice( int ADevice );
extern int __callconv casAssignDeviceEx( int ASourceDevice, int ADestDevice, int AOption );
extern int __callconv casGetDeviceTypes( void );
extern char* __callconv casGetDeviceTypeName( int AInterfaceType, char* Dest, int AMaxLen );
extern int __callconv casGetDeviceTypeOptions( int AInterfaceType );
extern int __callconv casGetDeviceTypeOption( int AInterfaceType, int AIndex );
extern char* __callconv casGetDeviceTypeOptionName( int AInterfaceType, int AInterfaceOptionIndex, char* Dest, int AMaxLen );
#define InitForced      1
extern int __callconv casInitialize( int ADevice, int Perform );
#define dpidTransmissionFileName        112
#define dpidConfigFileName              113
#define dpidCalibFileName               114
#define dpidTriggerCapabilities         118
//TriggerCapabilities constants; see dpidTriggerCapabilities
#define tcoCanTrigger                   0x00000001
#define tcoShowACQState                 0x00000020
extern double __callconv casGetDeviceParameter( int ADevice, int AWhat );
extern int __callconv casSetDeviceParameter( int ADevice, int AWhat, double AValue );
extern int __callconv casGetDeviceParameterString( int ADevice, int AWhat, char* ADest, int AMaxLen );
extern int __callconv casSetDeviceParameterString( int ADevice, int AWhat, char* AValue );
extern int __callconv casGetSerialNumberEx( int ADevice, int AWhat, char* Dest, int AMaxLen );
#define coUseTransmission          0x00000080
#define coAutorangeMeasurement     0x00000100
extern int __callconv casGetOptions( int ADevice );
extern void __callconv casSetOptionsOnOff( int ADevice, int AOptions, int AOnOff );
extern void __callconv casSetOptions( int ADevice, int AOptions );
//////////////////////////
// Measurement Commands //
//////////////////////////
extern int __callconv casMeasure( int ADevice );
extern int __callconv casStart( int ADevice );
extern int __callconv casMeasureDarkCurrent( int ADevice );
#define paUpdateCompleteCalibration    20
extern int __callconv casPerformAction( int ADevice, int AId ); //deprecated, use casPerformActionEx
extern int __callconv casPerformActionEx( int ADevice, int AActionID, int AParam1, int AParam2, void *AParam3 );
///////////////////////////
// Measurement Parameter //
///////////////////////////

//AWhat parameter constants for MeasurementParameter methods below
#define mpidIntegrationTime           1
#define mpidAverages                  2
#define mpidAutoRangeMaxIntTime      19
#define mpidAutoRangeMinLevel        20
#define mpidAutoRangeMaxLevel        49
extern double __callconv casGetMeasurementParameter( int ADevice, int AWhat );
extern int __callconv casSetMeasurementParameter( int ADevice, int AWhat, double AValue );
extern void __callconv casSetShutter( int ADevice, int OnOff );
extern void __callconv casGetPhotInt( int ADevice, double* APhotInt, char* AUnit, int AUnitMaxLen );
extern void __callconv casGetRadInt( int ADevice, double* ARadInt, char* AUnit, int AUnitMaxLen );
extern double __callconv casGetWidth( int ADevice );
extern double __callconv casGetWidthEx( int ADevice, int What ); // call only after casGetWidth
/////////////////////////////
// Colormetric Calculation //
/////////////////////////////
extern int __callconv casColorMetric( int ADevice );